--- a/.env
+++ b/.env
@@ -4,5 +4,7 @@ module.exports = {
     OPEN_WEATHER_API_KEY: process.env.OPEN_WEATHER_API_KEY,
     OPEN_WEATHER_BASE_URL: 'https://api.openweathermap.org/data/2.5/weather',
     CURRENCY_CONVERT_API_KEY: process.env.CURRENCY_CONVERT_API_KEY,
-    CURRENCY_CONVERT_BASE_URL: 'https://free.currconv.com'
+    CURRENCY_CONVERT_BASE_URL: 'https://free.currconv.com',
+    FOOTBALL_DATA_BASE_URL: 'http://api.football-data.org/v2',
+    FOOTBALL_DATA_API_KEY: process.env.FOOTBALL_DATA_API_KEY
 }
