--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "axios": "^0.21.4",
     "discord.js": "12.5.3",
     "emoji-js": "^3.6.0",
+    "moment": "^2.29.1",
     "store": "^2.0.12"
   }
 }
